corrigindo erros de layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
       
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top ml-auto">
     <div class="container">
         <a class="navbar-brand" href="#">Dra. Isabela</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -425,7 +425,7 @@
         const navMenu = document.querySelector('.collapse');
 
         navToggle.addEventListener('click', function() {
-       navMenu.classList.toggle('show');
+        navMenu.classList.toggle('show');
         });
       </script>
         
